# aococr

./: .gitignore  README.md  pyproject.toml
scripts/: makechars.py
src/aococr/: __init__.py  config.py  ocr.py  parsing.py  scanner.py
tests/: conftest.py  test_ocr.py
